<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.skytasul</groupId>
	<artifactId>beautyquests-parent</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>BeautyQuests</name>
	<description>A Spigot quests plugin based on a simple-to-use graphical
		interface.</description>
	<url>https://github.com/SkytAsul/BeautyQuests/</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>SkytAsul</name>
			<email>skytasul@gmail.com</email>
			<url>https://github.com/SkytAsul</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/SkytAsul/BeautyQuests.git</connection>
		<developerConnection>scm:git:ssh://github.com:SkytAsul/BeautyQuests.git</developerConnection>
		<url>http://github.com/SkytAsul/BeautyQuests/tree/master</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.release>8</maven.compiler.release>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<build.number>unknown</build.number>
		<human.version>1.0</human.version>
	</properties>

	<repositories>
		<repository>
			<id>codemc-nms</id>
			<url>https://repo.codemc.io/repository/nms/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>codemc-releases</id>
			<url>https://repo.codemc.org/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>codemc-snapshots</id>
			<url>https://repo.codemc.io/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>core</module>
		<module>integrations</module>
		<module>v1_9_R1</module>
		<module>v1_9_R2</module>
		<module>v1_12_R1</module>
		<module>v1_15_R1</module>
		<module>v1_16_R1</module>
		<module>v1_16_R2</module>
		<module>v1_16_R3</module>
		<module>v1_17_R1</module>
		<module>v1_18_R1</module>
		<module>v1_18_R2</module>
		<module>v1_19_R1</module>
		<module>v1_19_R2</module>
		<module>v1_19_R3</module>
		<module>v1_20_R1</module>
		<module>v1_20_R2</module>
		<module>dist</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>
		</plugins>
	</build>

</project>